# sequence_generator

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci.yml  run-tests-and-linting.yml
examples/: fibonacci.py  jansing.py
sequence_generator/: annotations.py  sequence_generator.py
src/: cli.py  sequence_generator.py
src/cli/: cli.py  options.py  prime.py  prime_indices.py  pure.py  utils.py
test/unit/: test_sequence_generator.py
