[tool.poetry]
name = "sequence-generator"
version = "0.1.0"
description = ""
authors = ["Alex Jansing"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
generate_sequence = "src.cli:generate_sequence"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
black = "^23.9.1"
click = "^8.1.7"
setuptools = "^68.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

