[tool.poetry]
name = "sequence-generator"
version = "0.1.0"
description = ""
authors = ["Alex Jansing <apjansing@gmail.com>"]
readme = "README.md"
repository = "https://github.com/apjansing/sequence_generator"
keywords = ["sequence", "generator", "fibonacci", "lucas"]
packages = [{include = "*", from  = "src"}]

[tool.pylint]
disable = "C0114,E0611,W0621"

[tool.poetry.scripts]
generate_sequence = "src.cli.cli:generate_sequence"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
black = "^23.9.1"
click = "^8.1.7"
setuptools = "^68.2.2"
sympy = "^1.12"
loguru = "^0.7.2"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.coverage.run]
omit = [
    "src/cli/*"
    ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

